[project]
name = "CASEDI_maggietsui"
version = "0.0.1"
authors = [
  { name="Maggie Tsui", email="margaret.tsui@ucsf.edu" },
]
description = "Cancer ASE driver identification (CASEDI)"
readme = "README.md"
requires-python = ">=3.9.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"